# cardo

./: .gitignore  pyproject.toml  requirements.txt  run.sh
src/: errors.py  exchange.py  ledger.py  main.py  stubs.py
src/agent/: broker.py  character.py  profiles.py  request.py  rule.py  rules.py
src/alpaca/: client.py  exchange.py  herder.py  ledger.py  utils.py  visualize.py
src/broker/: action.py  broker.py
src/canvas/: visualizer.py
src/config/: __init__.py  app_config.py  config.py  environment.py
src/exchange/: client.py  request.py
src/fox/: controller.py  messenger.py
src/interface/: messenger.py
src/parser/: __init__.py  mappings.py  message_parser.py  parser.py
src/portfolio/: ledger.py  request.py
src/resolver/: message_resolver.py
